--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,11 @@
      h1{
             color: red;
-            background-color: pink;
+           
         }
+     p {
+            color: blue;
+
+     }        
+     button{
+             color: palegreen;
+     }
