--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,14 @@
      h1{
             color: red;
+            background-color: antiquewhite;
            
         }
      p {
             color: blue;
+            background-color: gray;
 
      }        
      button{
              color: palegreen;
+             background-color: black;
      }
