--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,5 @@
-     h1{
-            color: red;
-            background-color: antiquewhite;
+     h2{
+            color:rgb(209, 4, 161) ;
            
         }
-     p {
-            color: blue;
-            background-color: gray;
-
-     }        
-     button{
-             color: palegreen;
-             background-color: black;
-     }
+    
