--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
      h2{
-            color:rgb(209, 4, 161) ;
-           
+            color:#0000ff;
+           background-color: #000000;
         }
     
