--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
      h1{
          text-align: center;
          text-decoration: dotted underline;
+         letter-spacing: 5px;
        
         }
     h3{
@@ -12,4 +13,5 @@
     }
     p{
       font-weight: 300;
+      line-height: 1.5;
     }
