--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,8 @@
          text-align: center;
          text-decoration: dotted underline;
          letter-spacing: 5px;
+         font-size: 50px;
+         font-family: impact;
        
         }
     h3{
@@ -14,4 +16,5 @@
     p{
       font-weight: 300;
       line-height: 1.5;
+      font-family: arial;
     }
