--- a/CSS/stylequora.css
+++ b/CSS/stylequora.css
@@ -15,9 +15,17 @@ h1 , h3{
     background-color: #f52936;
 }
 .upvote{
-    color: red;
+    color: green;
 }
 div[id="myid"] p {
     color: green
 
+}
+/*descendant selector*/
+.post a{
+    color: purple;
+    background-color: yellow;
+}
+nav ul li a{
+    color: hotpink;
 }
