--- a/CSS/practiceqs3.css
+++ b/CSS/practiceqs3.css
@@ -5,3 +5,15 @@
 h1{
     color: #1b74e4;
 }
+#searchbtn {
+    background-color: black;
+    color: white
+}
+
+.userbtn{
+    background-color: aqua;
+}
+/*
+#login,#register{
+    background-color: aqua;
+}
